Generate metadata for Dialogue interfaces